--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,6 +37,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="/productdetail"> Product Details <span class="sr-only"></span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/paymentplan"> Paymentplan Details <span class="sr-only"></span></a>
+            </li>
         </ul>
     </div>
 </nav>
