--- a/src/app/productdetail/productdetail.component.html
+++ b/src/app/productdetail/productdetail.component.html
@@ -14,8 +14,8 @@
                 <th>productName</th>
                 <th>productBrand</th>
                 <th>unitPrice</th>
-                <th>cusId</th>
-                <th>categoryId</th>
+                <!-- <th>cusId</th> -->
+                <!-- <th>categoryId</th> -->
                 <!-- <th>cusMobileNo</th>
                 <th>cusPassword</th> -->
                 <!-- <th>cusRegistrationDate</th>
@@ -29,8 +29,8 @@
                 <td>{{product.productName}}</td>
                 <td>{{product.productBrand}}</td>
                 <td>{{product.unitPrice}}</td>
-                <td>{{product.cusId}}</td>
-                <td>{{product.categoryId}}</td>   
+                <!-- <td>{{product.cusId}}</td>
+                <td>{{product.categoryId}}</td>    -->
                 <td><button class="btn btn-primary" (click)="onsubmit(product)">Edit</button> </td>   
                 <!-- <td><button class="btn btn-primary" [routerLink]="[cusDetails.cusId]" (click)="onsubmit">Edit</button> </td>   -->
                 <td><button class="btn btn-danger" (click)="delete(product)">delete</button></td>          
