--- a/src/app/cus-register/cus-register.component.html
+++ b/src/app/cus-register/cus-register.component.html
@@ -3,7 +3,7 @@
         <h2 class="card-title">Customer Register</h2><br>
     </div>
     <div class="col-md-6 offset-md-3">
-        <form  (ngSubmit)="onsubmit()">
+        <form  (ngSubmit)="onsubmit()" (ngSubmit)="update()">
             <div class="form-group">
                 <label for="cusFirstName"> First Name</label>
                 <input type="text" class="form-control" id="cusFirstName" name="cusFirstName" [(ngModel)]="addCustomer.cusFirstName"  placeholder="enter customer first Name">
@@ -31,6 +31,10 @@
                 <input type="email" class="form-control" id="cusEmail" name="cusEmail" [(ngModel)]="addCustomer.cusEmail" placeholder="enter customer email">
             </div>
             <div class="form-group  col-sm-6">
+                <label for="cusPassword">Password</label>
+                <input type="text" class="form-control" id="cusPassword" name="cusPassword" [(ngModel)]="addCustomer.cusPassword" placeholder="enter customer Password">
+            </div>
+            <div class="form-group  col-sm-6">
                 <label for="Address">Address</label>
                 <input type="text" class="form-control" id="Address" placeholder="enter customer Address">
             </div>
@@ -39,6 +43,9 @@
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Register</button>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Edit</button>
             </div>
         </form>
     </div>
