--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -38,7 +38,7 @@
                 <input  class="form-check-input" name="cusIsActive" [(ngModel)]="addCustomer.cusIsActive" type="checkbox" checked="">
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit" class="btn btn-primary">Update</button>
             </div>
         </form>
     </div>
